15_type_of_errors
# Day 15: 30 Days of python programming

# Python Errors

# 1. SyntaxError
>>> print 'hello'
  File "<stdin>", line 1
    print 'hello'
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?

## Correction
>>> print('Hello')
Hello

# 2. NameError
>>> print(age)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'age' is not defined

## Correction
>>> age = 25
>>> print(age)
25

# 3. IndexError
>>> numbers = [1,2,3,4,5]
>>> numbers[5]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range

## Correction
>>> numbers[4] 
5

# 4. ModuleNotFoundError
>>> import maths
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'maths'

## Correction
>>> import math
>>> 

# 5. AttributeError
>>> math.PI
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?

## Correction
>>> math.pi
3.141592653589793

# 6. KeyError
>>> users = {'name': 'Jack', 'age': 34, 'country': 'UK'}
>>> users['name']
'Jack'
>>> users['county']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'county'

## Correction
>>> users['country'] 
'UK'

# 7. TypeError
>>> 4 + '3'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'

## Correction
>>> 4 + int('3') 
7
>>> 4 + float('3') 
7.0

# 8. ImportError
>>> from math import power
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: cannot import name 'power' from 'math' (unknown location)

## Correction
>>> from math import pow  
>>> pow(2,2) 
4.0
>>> pow(2,4) 
16.0

# 9. ValueError
>>> int('12a')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: '12a'
  
# 10. ZeroDivisionError
>>> 1/0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ZeroDivisionError: division by zero





